Navbar colors changed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,21 +2,30 @@
 
 <style>
 .navbar-custom {
-    background-color: #e67411cc;
+    background-color: #ff5d8f;
 }
 /* change the brand and text color */
-.navbar-custom .navbar-brand,
+.navbar-brand{
+  
+   font-weight: bold;
+   color:#ffffff;
+}
+.navbar-custom 
 .navbar-custom .navbar-text {
     color: rgba(255,255,255,.8);
 }
 /* change the link color */
 .navbar-custom .navbar-nav .nav-link {
-    color: rgba(255,255,255,.5);
+    color:#ffffff;
 }
 /* change the color of active or hovered links */
 .navbar-custom .nav-item.active .nav-link,
 .navbar-custom .nav-item:hover .nav-link {
     color: #ffffff;
+}
+.searchButton{
+  color:white;
+  background-color: black;
 }
 </style>
 
@@ -30,7 +39,7 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <form class="d-flex ms-auto">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn searchButton" type="submit">Search</button>
       </form>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -51,6 +60,6 @@
     </div>
   </div>
 </nav>
-
+<app-home></app-home>
 
 <router-outlet></router-outlet>
