Login page form added

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,37 @@
-<p>login works!</p>
+<!DOCTYPE html>
+<html>
+  <head> </head>
+  <body>
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col col-md-4 mt-5">
+          <form class="border border-dark m-1 p-5">
+            <div class="form-group mb-3 mt-1">
+              <label for="userName">UserName</label>
+              <input
+                type="email"
+                class="form-control"
+                id="userName"
+                aria-describedby="emailHelp"
+                placeholder="Enter email"
+              />
+            </div>
+            <div class="form-group mb-3">
+              <label for="exampleInputPassword1">Password</label>
+              <input
+                type="password"
+                class="form-control"
+                id="exampleInputPassword1"
+                placeholder="Password"
+              />
+            </div>
+           <div class="form-group mb-2">
+                 <b>Don't have account yet? <a href="/register">Register Here</a></b>
+           </div>
+            <button type="submit" class="btn btn-dark btn-sm">SignIn</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
