--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,6 +6,22 @@
       <div class="row justify-content-md-center">
         <div class="col col-md-4 mt-5">
           <form class="border border-dark m-1 p-5">
+            <div class="text-center mb-2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="50"
+                height="50"
+                fill="currentColor"
+                class="bi bi-person-circle"
+                viewBox="0 0 16 16"
+              >
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                <path
+                  fill-rule="evenodd"
+                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"
+                />
+              </svg>
+            </div>
             <div class="form-group mb-3 mt-1">
               <label for="userName">UserName</label>
               <input
@@ -25,10 +41,15 @@
                 placeholder="Password"
               />
             </div>
-           <div class="form-group mb-2">
-                 <b>Don't have account yet? <a href="/register">Register Here</a></b>
-           </div>
-            <button type="submit" class="btn btn-dark btn-sm">SignIn</button>
+            <div class="form-group mb-3">
+              <b
+                >Don't have account yet?
+                <a href="/register">Register Here</a></b
+              >
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-dark btn-sm">Sign In</button>
+            </div>
           </form>
         </div>
       </div>
