--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,73 @@
-<p>register works!</p>
+<!DOCTYPE html>
+<html>
+  <head> </head>
+  <body>
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col col-md-4 mt-5">
+          <form class="border border-dark m-1 p-5">
+            <div class="text-center mb-2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="50"
+                height="50"
+                fill="currentColor"
+                class="bi bi-person-circle"
+                viewBox="0 0 16 16"
+              >
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                <path
+                  fill-rule="evenodd"
+                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"
+                />
+              </svg>
+            </div>
+            <div class="form-group mb-3 mt-1">
+              <label for="firstName">FirstName</label>
+              <input
+                type="text"
+                class="form-control"
+                id="firstName"
+                aria-describedby="firstname"
+                placeholder="Enter First Name"
+              />
+            </div>
+            <div class="form-group mb-3 mt-1">
+                <label for="lastName">LastName</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="lastName"
+                  aria-describedby="lastname"
+                  placeholder="Enter Last Name"
+                />
+              </div>
+              <div class="form-group mb-3 mt-1">
+                <label for="email">Email</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  aria-describedby="email"
+                  placeholder="Enter email"
+                />
+              </div>
+            <div class="form-group mb-3">
+              <label for="exampleInputPassword1">Password</label>
+              <input
+                type="password"
+                class="form-control"
+                id="exampleInputPassword1"
+                placeholder="Password"
+              />
+            </div>
+           
+            <div class="text-center">
+              <button type="submit" class="btn btn-dark btn-sm" (click)="redirectToLogin()">Register</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
