--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,19 +26,23 @@
               <label for="userName">UserName</label>
               <input
                 type="email"
+                name="email"
                 class="form-control"
                 id="userName"
                 aria-describedby="emailHelp"
                 placeholder="Enter email"
+                [(ngModel)] = "username"
               />
             </div>
             <div class="form-group mb-3">
               <label for="exampleInputPassword1">Password</label>
               <input
                 type="password"
+                name="password"
                 class="form-control"
                 id="exampleInputPassword1"
                 placeholder="Password"
+                [(ngModel)] = "password"
               />
             </div>
             <div class="form-group mb-3">
@@ -48,7 +52,7 @@
               >
             </div>
             <div class="text-center">
-              <button type="submit" class="btn btn-dark btn-sm">Sign In</button>
+              <button type="submit" class="btn btn-dark btn-sm" (click)="login()">Sign In</button>
             </div>
           </form>
         </div>
