--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,72 +1,78 @@
-
-
 <style>
-.navbar-custom {
+  .navbar-custom {
     background-color: #ff5d8f;
-}
-/* change the brand and text color */
-.navbar-brand{
-  
-   font-weight: bold;
-   color:#ffffff;
-}
-.navbar-custom 
-.navbar-custom .navbar-text {
-    color: rgba(255,255,255,.8);
-}
-/* change the link color */
-.navbar-custom .navbar-nav .nav-link {
-    color:#ffffff;
-}
-/* change the color of active or hovered links */
-.navbar-custom .nav-item.active .nav-link,
-.navbar-custom .nav-item:hover .nav-link {
+  }
+  /* change the brand and text color */
+  .navbar-brand {
+    font-weight: bold;
     color: #ffffff;
-}
-.searchButton{
-  color:white;
-  background-color: black;
-}
-.navbar-toggler{
-  color:white;
-  /* background-color: black; */
-}
-.navbar-toggler-icon{
-  color:white;
-}
+  }
+  .navbar-custom .navbar-custom .navbar-text {
+    color: rgba(255, 255, 255, 0.8);
+  }
+  /* change the link color */
+  .navbar-custom .navbar-nav .nav-link {
+    color: #ffffff;
+  }
+  /* change the color of active or hovered links */
+  .navbar-custom .nav-item.active .nav-link,
+  .navbar-custom .nav-item:hover .nav-link {
+    color: #ffffff;
+  }
+  .searchButton {
+    color: white;
+    background-color: black;
+  }
+  .navbar-toggler {
+    color: white;
+    /* background-color: black; */
+  }
+  .navbar-toggler-icon {
+    color: white;
+  }
 </style>
 
 <!-- Toolbar -->
 <nav class="navbar navbar-expand-lg navbar-custom">
   <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarTogglerDemo03"
+      aria-controls="navbarTogglerDemo03"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="/home">Bdaybumps</a>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-      <form class="d-flex ms-auto">
+      <!-- <form class="d-flex ms-auto">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn searchButton" type="submit">Search</button>
-      </form>
+      </form> -->
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Notifications</a>
+        <li class="nav-item" *ngIf="check">
+          <a class="nav-link active" aria-current="page" href="#"
+            >Notifications</a
+          >
         </li>
-        <li class="nav-item">
+        <li class="nav-item"  *ngIf="check">
           <a class="nav-link active" aria-current="page" href="#">Chat</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="check">
+          <a class="nav-link active" href="/login" (click)="logout()">Logout</a>
+        </li>
+        <li class="nav-item" *ngIf="!check">
           <a class="nav-link active" href="/login">Login</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!check">
           <a class="nav-link active" href="/register">Register</a>
         </li>
-        
       </ul>
-     
     </div>
   </div>
 </nav>
-
 
 <router-outlet></router-outlet>
