--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,1 +1,20 @@
-<p>feed works!</p>
+<!DOCTYPE html>
+<html>
+    <head>
+      <style>
+          .feedcard{
+              background-color: white;
+              min-height: 350px;
+
+          }
+      </style>
+    </head>
+    <body>
+        <div class="feedcard shadow p-3 mb-5 bg-white rounded">
+          Feedcard
+        </div>
+        <div class="feedcard shadow p-3 mb-5 bg-white rounded">
+            Feedcard
+          </div>
+    </body>
+</html>
