Hover effects and Feed card changes

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <style>
-          .feedcard{
-              background-color: white;
-              min-height: 350px;
-
-          }
-      </style>
-    </head>
-    <body>
-        <div class="feedcard shadow p-3 mb-5 bg-white rounded">
-          Feedcard
-        </div>
-        <div class="feedcard shadow p-3 mb-5 bg-white rounded">
-            Feedcard
+  <head>
+    <style>
+      .feedcard {
+        background-color: white;
+        min-height: 350px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="feedcard shadow p-3 mb-5 bg-white rounded">
+      <div class="row">
+        <h5>Vinod's Birthday Glimpse</h5>
+        <hr />
+      </div>
+      <div class="row">
+        <img
+          src="/assets/images/devathi.jpg"
+          alt="Profile"
+          height="500px"
+        />
+        <hr/>
+      </div>
+      <div class="row">
+          <div class="col col-md-4">
+               <button class="btn btn-outline-dark">Add To Memory</button>
           </div>
-    </body>
+          
+          <div class="col col-md-5">
+            <button class="btn btn-outline-dark">Remove From Feed</button>
+          </div>
+          <div class="col col-md-3">
+            <button class="btn btn-outline-dark">Download</button>
+          </div>
+      </div>
+    </div>
+    <div class="feedcard shadow p-3 mb-5 bg-white rounded">Feedcard</div>
+  </body>
 </html>
