--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,6 +36,9 @@
           padding: 20px;
 
       }
+      .item:hover{
+          background-color: #f0e7e7;
+      }
     </style>
   </head>
   <body>
