icons added to feed

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -24,14 +24,20 @@
       </div>
       <div class="row">
           <div class="col col-md-4">
-               <button class="btn btn-outline-dark">Add To Memory</button>
+               <button class="btn btn-outline-dark">
+                <fa-icon [icon]="faMemory" class="fa-sm"></fa-icon>   
+                Add To Memory</button>
           </div>
           
           <div class="col col-md-5">
-            <button class="btn btn-outline-dark">Remove From Feed</button>
+            <button class="btn btn-outline-dark">
+                <fa-icon [icon]="faTrash" class="fa-sm"></fa-icon>
+                Remove From Feed</button>
           </div>
           <div class="col col-md-3">
-            <button class="btn btn-outline-dark">Download</button>
+            <button class="btn btn-outline-dark">
+                <fa-icon [icon]="faDownload" class="fa-sm"></fa-icon>
+                Download</button>
           </div>
       </div>
     </div>
