--- a/src/app/remcard/remcard.component.html
+++ b/src/app/remcard/remcard.component.html
@@ -34,8 +34,27 @@
             <span class="col col-md-6 offset-md-1">
             Sai Suman
             </span>
-            <button class="col col-md-3 btn btn-light btn-sm">Wish</button>
+            <button class="col col-md-3 btn btn-light btn-sm" type="button" (click)="showModal()">Wish</button>
         </div>
+        <div class="modal fadein" *ngIf="modaldisplay" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
        
     </body>
 </html>
