--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
 </style>
 
 <!-- Toolbar -->
-<nav class="navbar navbar-expand-lg navbar-custom">
+<nav class="navbar navbar-expand-lg fixed-top navbar-custom">
   <div class="container-fluid">
     <button
       class="navbar-toggler"
