--- a/src/app/remcard/remcard.component.html
+++ b/src/app/remcard/remcard.component.html
@@ -1,60 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <head>
-       <style>
-          .rcard{
-              background-color: #367fa3;
-              padding: 5px;
-              margin-bottom: 5px;
-              color: white;
-              border-radius: 10px;
-          }
-       </style>
-    </head>
-    <body>
-        <div class=" row rcard">
-            <fa-icon [icon]="fagift" class="fa-lg col col-md-1 "> </fa-icon>
-            <span class="col col-md-6 offset-md-1">
-                Vinod Rasineni 
-            </span>
-            <button class="col col-md-3 btn btn-light btn-sm">Wish</button>
-           
-           
-        </div>
-        <div class="row rcard">
-            <fa-icon [icon]="fagift" class="fa-lg col col-md-1"> </fa-icon>
-            <span class="col col-md-6 offset-md-1">
-            Praveen Kumar 
-            </span>
-            <button class="col col-md-3 btn btn-light btn-sm">Wish</button>
-
-        </div>
-        <div class="row rcard">
-            <fa-icon [icon]="fagift" class="fa-lg col col-md-1"> </fa-icon> 
-            <span class="col col-md-6 offset-md-1">
-            Sai Suman
-            </span>
-            <button class="col col-md-3 btn btn-light btn-sm" type="button" (click)="showModal()">Wish</button>
-        </div>
-        <div class="modal fadein" *ngIf="modaldisplay" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-              </div>
-            </div>
-          </div>
-       
-    </body>
+  <head>
+    <style>
+      .rcard {
+        background-color: #367fa3;
+        padding: 5px;
+        margin-left: 20px;
+        margin-right: 10px;
+        margin-bottom: 15px;
+        color: white;
+        border-radius: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <h4  style="text-align: center;">Your Besties Timeline.</h4>
+    <hr />
+    <h5 style="text-align: center;">Bday Stars of the day</h5>
+    <div class="row  rcard" *ngFor="let i of data.day">
+      <fa-icon [icon]="fagift" class="fa-lg col col-md-1"> </fa-icon>
+      <span class="col col-md-6 offset-md-1"> {{i.fname}} </span>
+      <button class="col col-md-3 btn btn-light btn-sm">Wish</button>
+    </div>
+    <hr/>
+    <h5  style="text-align: center;">Bday Stars of the Week</h5>
+    <div class="row rcard" *ngFor="let i of data.week">
+        <fa-icon [icon]="fagift" class="fa-lg col col-md-1"> </fa-icon>
+        <span class="col col-md-6 offset-md-1"> {{i.fname}} </span>
+        <button class="col col-md-3 btn btn-light btn-sm">Wish</button>
+      </div>
+      <hr/>
+    <h5  style="text-align: center;">Bday Starts of the Month</h5>
+    <div class="row rcard" *ngFor="let i of data.month">
+        <fa-icon [icon]="fagift" class="fa-lg col col-md-1"> </fa-icon>
+        <span class="col col-md-6 offset-md-1"> {{i.fname}} </span>
+        <button class="col col-md-3 btn btn-light btn-sm">Wish</button>
+      </div>
+  </body>
 </html>
