New components created for left menu

--- a/src/app/remcard/remcard.component.html
+++ b/src/app/remcard/remcard.component.html
@@ -40,7 +40,7 @@
       >Remind</button>
     </div>
     <hr />
-    <h5 style="text-align: center">Bday Starts of the Month</h5>
+    <h5 style="text-align: center">Bday Stars of the Month</h5>
     <div class="row rcard" *ngFor="let i of data.month">
       <fa-icon [icon]="fagift" class="fa-lg col col-md-1"> </fa-icon>
       <span class="col col-md-6 offset-md-1"> {{ i.fname }} </span>
