--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,7 +3,7 @@
   <head> </head>
   <body>
     <div class="container">
-      <div class="row justify-content-md-center">
+      <div class="row justify-content-md-center mt-5">
         <div class="col col-md-4 mt-5">
           <form class="border border-dark m-1 p-5">
             <div class="text-center mb-2">
